# class_name SoundManager
extends Node

@onready var BounceSound: AudioStreamPlayer = $Bounce
@onready var HitSpikeSound: AudioStreamPlayer = $HitSpike
@onready var JumpSound: AudioStreamPlayer = $Jump
@onready var LeaveScreenSound: AudioStreamPlayer = $LeaveScreen
@onready var SwitchJumpModeSound: AudioStreamPlayer = $SwitchJumpMode
